@@ -8,6 +8,15 @@ paths for us but in the ADIO path, they were failing because we were just
 using strcmp to test the path against the possible mount points.  Now we
 tokenize and compare each token one by one.  Extra dots in a path 
 (e.g. /mnt/./plfs) still won't work in ADIO.
+* added tools/plfs_recover which is designed for the case where a user
+modified the plfsrc to change the set of backends for an existing mount point.
+They shouldn't ever do this!  But if they do, what will happen is that they
+will see their file on a readdir() but on a stat() they'll either get ENOENT
+because there is nothing at the new canonical location, or they'll see a
+shadow container which looks like a directory to them.  So this function makes
+it so that a plfs file that had a different previous canonical location is now
+recovered to the new canonical location.  hopefully it always works but it
+won't currently work across different file systems because it uses rename()
 
 ~~~ Version 2.0.1
 * Reduced container overhead by 4 files and 2 directories: combined access
